LICustom starter code

--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TA Custom Lesson</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="typewriter">
-        <h1>Animating with Bunjee</h1>
-      </div>
 
-      <div>
-        <button onclick="onClick()">Click Me</button>
-      </div>
-    
-    <br>
-    <br>
-    <script src="sketch.js" defer></script>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TA Custom Lesson</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="typewriter">
+    <h1>ANIMATING WITH BUNJEE</h1>
+  </div>
+
+
+  <!-- TOGGLE SWITCH -->
+  <label class="switch">
+    <input type="checkbox">
+    <span class="slider round"></span>
+  </label>
+
+  <!-- FOOTER -->
+  <!-- <div class="footer lightMode">
+    <p>Footer</p>
+  </div> -->
+
+  <script src="script.js" defer></script>
 </body>
+
 </html>
