--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TA Custom Lesson</title>
+  <title>LI Custom Lesson test</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,12 +14,20 @@
     <h1>ANIMATING WITH BUNJEE</h1>
   </div>
 
+  <div class="animate1">
+    <p>
+      Hover Me
+    </p>
+  </div>
+  <button class="animate2">
+    Hover Me
+  </button>
 
   <!-- TOGGLE SWITCH -->
-  <label class="switch">
+  <!-- <label class="switch">
     <input type="checkbox">
     <span class="slider round"></span>
-  </label>
+  </label> -->
 
   <!-- FOOTER -->
   <!-- <div class="footer lightMode">
