--- a/index.html
+++ b/index.html
@@ -19,20 +19,21 @@
       Hover Me
     </p>
   </div>
+  
   <button class="animate2">
-    Hover Me
+    I'm a animated button!
   </button>
 
   <!-- TOGGLE SWITCH -->
-  <!-- <label class="switch">
+  <label class="switch">
     <input type="checkbox">
     <span class="slider round"></span>
-  </label> -->
+  </label>
 
   <!-- FOOTER -->
-  <!-- <div class="footer lightMode">
-    <p>Footer</p>
-  </div> -->
+  <div class="footer lightMode">
+    <p>Made by <a href="https://github.com/BunjeeA/BunjeeLICustom" target="_blank">Abolaji Awoyomi</a></p>
+  </div>
 
   <script src="script.js" defer></script>
 </body>
